--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme: abhinavs/moonwalk
 # Plugins
 plugins:
   - jekyll-feed
-  - jekyll-seo-tag
+  - jekyll-soopr-seo-tag
   - jekyll-remote-theme
 
 # Build settings
